[package]
name = "blinkenpad"
version = "0.1.0"
edition = "2021"
authors = ["Sunny Kalsi <thesunnyk@gmail.com>"]
description = "Blinkenlights + Macropad + Launchpad"
repository = "https://github.com/thesunnyk/blinkenpad"
readme = "README.md"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.6.0"
clap = "3.2.22"
dbus = "0.9.5"
mpris = "2.0.0-rc3"
libxdo = "0.6.0"
anyhow = "1.0.66"
